# Ohjelmistotekniikka-harjoitustyo

./: .coverage  .env  .gitignore  README.md  pyproject.toml  tasks.py
dokumentaatiot/: arkkitehtuuri.md  changelog.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
dokumentaatiot/misc/: arkkitehtuuri.md  changelog.md  kayttoohje.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: viikko1.md
laskarit/viikko2/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: tehtava1.md  tehtava2.md
src/: build.py  config.py  index.py
src/DAO/: transactionsDAO.py  userDAO.py
src/UI/: create_user_view.py  login_view.py  main_view.py  transaction_view.py  ui.py
src/database/: connection.py  initialize_database.py
src/tests/DAO_test/: transactions_test.py  users_test.py
src/tests/service/: conftest.py
