[project]
name = "ot-harjoitustyo"
version = "0.1.0"
description = ""
authors = [
    {name = "hanskval",email = "valtteri.hanska@helsinki.fi"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv",
    "bcrypt (>=5.0.0,<6.0.0)",
    "invoke (>=2.2.1,<3.0.0)",
]

[tool.poetry]
packages = [{include = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]
